--- a/ecommerce/styles/globals.css
+++ b/ecommerce/styles/globals.css
@@ -1,16 +1,23 @@
-html,
-body {
-  padding: 0;
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+ul {
+  list-style-type: none;
+}
+
+.container {
+  max-width: 1100px;
+  width: 70%;
+  margin: 0 auto;
 }
