--- a/ecommerce/styles/Products.module.css
+++ b/ecommerce/styles/Products.module.css
@@ -1,6 +1,5 @@
-.container {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;  
+.product {
+  border: 1px solid #ccc;
+  padding: 20px;
+  text-align: center;
 }
