--- a/ecommerce/styles/globals.css
+++ b/ecommerce/styles/globals.css
@@ -21,3 +21,18 @@ ul {
   width: 70%;
   margin: 0 auto;
 }
+
+.main {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 2rem;
+  padding: 50px 0;
+}
+
+.button {
+  padding: 10px 30px;
+  background-color: bisque;
+  margin-top: 20px;
+  display: block;
+  color: rgb(174, 172, 172);
+}
