--- a/ecommerce/styles/Navbar.module.css
+++ b/ecommerce/styles/Navbar.module.css
@@ -36,4 +36,9 @@
   position: absolute;
   width: 100%;
   height: 60px; /* Height of the footer */
+  margin-top: auto;
+}
+
+.footer ul {
+  margin-left: 25px;
 }
