--- a/ecommerce/styles/globals.css
+++ b/ecommerce/styles/globals.css
@@ -20,6 +20,7 @@ ul {
   max-width: 1100px;
   width: 70%;
   margin: 0 auto;
+  min-height: 84vh;
 }
 
 .main {
@@ -27,6 +28,7 @@ ul {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 2rem;
   padding: 50px 0;
+  min-height: 100vh;
 }
 
 .button {
