--- a/ecommerce/styles/globals.css
+++ b/ecommerce/styles/globals.css
@@ -12,6 +12,12 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  color: rgb(174, 172, 172);
+  border-radius: 50px;
+  background-color: bisque;
+}
+
 ul {
   list-style-type: none;
 }
@@ -37,4 +43,11 @@ ul {
   margin-top: 20px;
   display: block;
   color: rgb(174, 172, 172);
+  border-radius: 25px;
+}
+
+.button:hover {
+  color: rgb(174, 172, 172);
+  background-color: rgb(220, 220, 220);
+  border-radius: 25px;
 }
